# RAG_chatbot

./: .gitignore  README.md  ingestion.py  main.py  pyproject.toml  test.py
chat/: chat_engine.py  chat_history.py  document_index.py
configuration/: config.py  logging.py  nodeprocessor.py
database/: base.py  chat.py
llm_model/: __init__.py  init_models.py
models/: chat_models.py
notebook/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  llamaindex_rag-checkpoint.ipynb
prompts/: system_prompt.jinja
router/: chatapi.py
