[project]
name = "rag-chatbot"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi[standard] (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "psycopg[binary] (>=3.2.9,<4.0.0)",
    "llama-index (>=0.13.0,<0.14.0)",
    "llama-index-vector-stores-postgres (>=0.6.1,<0.7.0)",
    "llama-index-embeddings-ollama (>=0.7.0,<0.8.0)",
    "llama-index-llms-ollama (>=0.7.0,<0.8.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
